fix: updated gold color in dark mode

--- a/quartz/styles/colors.scss
+++ b/quartz/styles/colors.scss
@@ -14,7 +14,7 @@
   --blue: #8caaee;
   --lavender: #9899d7;
   --purple: #ba8be9;
-  --gold: #996d00; /* Gold */
+  --gold: #db9c01; /* Gold */
 
   // Theme-specific colors (from quartz.config.ts darkMode)
   --background: #303446; // frappeColors.base
